[package]
name = "rust_compiler_test"
version = "0.1.0"
edition = "2021"

[lib]
name = "vm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
insta = "1.39.0"
nom = "7.1.3"
nom_locate = "4.2.0"
ustr = "1.0.0"
